# grumpyclaw

./: .env.example  .gitignore  IMPLEMENT_GRUMPREACHY.md  IMPLEMENT_GRUMPYCLAW.md  README.md  RUN.md  pyproject.toml
api/: main.py  pyproject.toml
api/backend/: admin_service.py  chat_service.py  config.py  db.py  event_bus.py  models.py  robot_service.py  runtime.py  state.py
api/backend/assistant/: __init__.py  heartbeat_scheduler.py  manager.py  realtime_service.py  text_gateway.py  tools.py
api/backend/routers/: __init__.py  admin.py  assistant.py  chat.py  conversation.py  devices.py  robot.py  runtime.py  system.py
api/tests/: conftest.py  test_api.py  test_audio_device_selection.py  test_db.py
data/: grumpyclaw.db
src/grumpyclaw/: __init__.py
src/grumpyclaw/adapters/: __init__.py  google_docs.py
src/grumpyclaw/llm/: __init__.py  client.py
src/grumpyclaw/memory/: __init__.py  db.py  indexer.py  retriever.py
src/grumpyclaw/scripts/: chat.py  heartbeat.py  slack_bot.py  sync_google_docs.py
src/grumpyclaw/skills/: __init__.py  registry.py
src/grumpyreachy/: __init__.py  actions.py  app.py  audio_test.py  camera_worker.py  config.py  dance_emotion_moves.py  feedback.py  heartbeat_bridge.py  memory_bridge.py  moves.py  observer.py  openai_realtime.py  prompts.py  robot_controller.py  tool_adapter.py
src/grumpyreachy/audio/: __init__.py  head_wobbler.py
src/grumpyreachy/prompts/: default_prompt.txt
src/grumpyreachy/scripts/: __init__.py  chat.py  heartbeat.py  run.py
src/grumpyreachy/tools/: __init__.py  ask_grumpyclaw.py  camera.py  core_tools.py  dance.py  do_nothing.py  head_tracking.py  (+5 more)
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
web/src/: App.tsx  api.ts  styles.css
(+11 files in other folders)
